--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Pantry: Smart Grocery Tracking</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href= "../assets/style.css">
+    <link rel="stylesheet" type="text/css" href= "../css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
    
