updated multiple files

--- a/public/html/recipes.html
+++ b/public/html/recipes.html
@@ -7,14 +7,32 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href= "../css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-   
+  </head> 
   <body> 
     <section class="section">
         <div class="container">
           <img src="../assets/mediumsmall.png" style = "width: 250px" class = "png">
         </div>
       </section>
+      <div class="columns">
+        <div class="column is-three-fifths">
+          First column
+        </div>
+        <div class="column is-two-fifths">
+          <div class="control">
+            <label class="radio">
+              <input type="radio" name="answer">
+              Increase
+            </label>
+            <label class="radio">
+              <input type="radio" name="answer">
+              Decrease
+            </label>
+          </div>
+        </div>
+
+
+
      
   </body>
 </html>
