--- a/public/html/additems.html
+++ b/public/html/additems.html
@@ -7,14 +7,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href= "../css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-   
+  </head> 
   <body> 
     <section class="section">
         <div class="container">
           <img src="../assets/mediumsmall.png" style = "width: 250px" class = "png">
         </div>
       </section>
+<section>
+ <div class="container">
+  <button class="button is-rounded is-large addmanually">Add Items Manually</button>
+</div>
+  </section>
+
+
+
      
   </body>
 </html>
