updated css and recipes.html

--- a/public/html/recipes.html
+++ b/public/html/recipes.html
@@ -19,20 +19,15 @@
           First column
         </div>
         <div class="column is-two-fifths">
-          <div class="control">
-            <label class="radio">
-              <input type="radio" name="answer">
-              Increase
-            </label>
-            <label class="radio">
-              <input type="radio" name="answer">
-              Decrease
-            </label>
+          <div class="control field is-horizontal">
+            <i class="fas fa-minus-circle fa-3x"></i>
+            <input class="input is-rounded is-medium text" type="text" placeholder="Ingredient">
+            <input class="input is-rounded is-medium number" type="number" placeholder="Number">
+            <i class="fas fa-plus-circle fa-3x"></i>
+
+            
           </div>
         </div>
-
-
-
      
   </body>
 </html>
