--- a/public/html/recipes.html
+++ b/public/html/recipes.html
@@ -21,8 +21,8 @@
         <div class="column is-two-fifths">
           <div class="control field is-horizontal">
             <i class="fas fa-minus-circle fa-3x"></i>
-            <input class="input is-rounded is-medium text" type="text" placeholder="Ingredient">
-            <input class="input is-rounded is-medium number" type="number" placeholder="Number">
+            <input class="input is-medium text" type="text" placeholder="Ingredient">
+            <input class="input is-medium number" type="number" placeholder="Number">
             <i class="fas fa-plus-circle fa-3x"></i>
 
             
