updated recipes.html and css

--- a/public/html/recipes.html
+++ b/public/html/recipes.html
@@ -16,16 +16,18 @@
       </section>
       <div class="columns">
         <div class="column is-three-fifths">
-          First column
+          Recipes
         </div>
         <div class="column is-two-fifths">
           <div class="control field is-horizontal">
+            <button class="btn" type="reset">
             <i class="fas fa-minus-circle fa-3x"></i>
+          </button>
             <input class="input is-medium text" type="text" placeholder="Ingredient">
-            <input class="input is-medium number" type="number" placeholder="Number">
+            <input class="input is-medium amount" type="text" placeholder="#">
+            <button class="btn" type="reset">
             <i class="fas fa-plus-circle fa-3x"></i>
-
-            
+          </button> 
           </div>
         </div>
      
