--- a/public/html/additems.html
+++ b/public/html/additems.html
@@ -9,6 +9,11 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head> 
   <body> 
+    <div class = "home">
+        <button class="btn" type="reset">
+        <i class="fas fa-home fa-3x"></i>
+        </button>
+      </div>
     <section class="section">
         <div class="container">
           <img src="../assets/mediumsmall.png" style = "width: 250px" class = "png">
