--- a/public/html/recipes.html
+++ b/public/html/recipes.html
@@ -9,6 +9,12 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head> 
   <body> 
+    <div class = "home">
+    <button class="btn" type="reset">
+    <i class="fas fa-home fa-3x"></i>
+    </button>
+    </div>
+  </button>
     <section class="section">
         <div class="container">
           <img src="../assets/mediumsmall.png" style = "width: 250px" class = "png">
@@ -27,6 +33,8 @@
             <input class="input is-medium amount" type="text" placeholder="#">
             <button class="btn" type="reset">
             <i class="fas fa-plus-circle fa-3x"></i>
+            <button class="btn" type="reset">
+              <i class="fas fa-save fa-3x"></i>
           </button> 
           </div>
         </div>
