--- a/public/signup.html
+++ b/public/signup.html
@@ -26,7 +26,7 @@
 			<div class="wrap-login100">
 				<form class="signup login100-form validate-form ">
 					<span class="login100-form-title p-b-26">
-            Welcome to MyPanty
+            Welcome to MyPantry
 					</span>
 					<span class="login100-form-title p-b-48">
 						<img src="/assets//mediumsmall.png" style="width: 100%;" alt="">
